TEST_PROGRAMS/INVALID/eric_ditomasso/ifwhile.min
var x: int;
var y: string;

# testing nested if/while loops
while x do
	x = x - 1;
	if x then #comment
		if y then #comment
		else #comment
		endif #comment
		y = 7; #comment
	else#comment
	#comment
done
